webtools.jsf can not build cleanly with Java 11
Signed-off-by: Nitin Dahyabhai <thatnitind@gmail.com>
Change-Id: I21ff9a7326da82ca081d4dd7002bd17ddebfbd31